fix select field on mobile

--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -1086,10 +1086,6 @@
     transition: opacity 0.3s ease;
   }
 
-  .is-freeze-window & {
-    position: fixed;
-  }
-
   // Стрелочка сверху над блоком
 
   .datepicker--pointer {
